# Cplusplus-Primer

./: .gitignore  CMakeLists.txt  README.md
Chapter_1/: listing_bookstore.cpp  listing_comment.cpp  listing_member_function.cpp  listing_sales_item.cpp  listing_sales_item_add.cpp  test_1_20.cpp  test_1_22.cpp  test_1_23.cpp  第1章 开始.md  第1章练习.md
chapter_1/: listing_for.cpp  listing_if.cpp  listing_input_while.cpp  listing_io.cpp  listing_while.cpp  test_1_10.cpp  test_1_11.cpp  test_1_12.cpp  test_1_16.cpp  test_1_3.cpp  test_1_4.cpp  test_1_5.cpp  test_1_6.cpp  test_1_9.cpp
chapter_10/: listing_generic_algorithm.cpp  test_10_1.cpp  test_10_11.cpp  test_10_12.cpp  test_10_13.cpp  test_10_14.cpp  test_10_15.cpp  test_10_18.cpp  test_10_2.cpp  test_10_20.cpp  test_10_21.cpp  test_10_24.cpp  test_10_27.cpp  test_10_28.cpp  test_10_29.cpp  test_10_29.txt  test_10_30.cpp  test_10_31.cpp  test_10_33.cpp  test_10_33.txt  test_10_34.cpp  test_10_35.cpp  test_10_36.cpp  test_10_37.cpp  test_10_4.cpp  test_10_42.cpp  test_10_5.cpp  test_10_6.cpp  test_10_9.cpp  第10章 泛型算法.md
chapter_11/: listing_associative_container.cpp  test_11_10.cpp  test_11_12.cpp  test_11_14.cpp  test_11_16.cpp  test_11_17.cpp  test_11_20.cpp  test_11_23.cpp  test_11_26.cpp  test_11_31.cpp  test_11_38.cpp  test_11_4.cpp  test_11_7.cpp  test_11_8.cpp  test_11_9.cpp  test_11_9.txt  第11章 关联容器.md
chapter_12/: Youth.txt  listing_dynamic_memory.cpp  test_12_10.cpp  test_12_14.cpp  test_12_17.cpp  test_12_20.cpp  test_12_23.cpp  test_12_24.cpp  test_12_26.cpp  test_12_28.cpp  test_12_6.cpp  test_12_7.cpp  第12章 动态内存.md
chapter_13/: listing_copy_control.cpp  test_13_28.cpp  test_13_30.cpp  test_13_31.cpp  test_13_39.cpp  test_13_5.cpp  第13章 拷贝控制.md
chapter_14/: listing_overloaded_operations.cpp  test_14_16.cpp  test_14_2.cpp  test_14_22.cpp  test_14_3.cpp  test_14_34.cpp  test_14_35.cpp  test_14_37.cpp  test_14_38.cpp  test_14_38.txt  test_14_40.cpp  test_14_42.cpp  test_14_43.cpp  test_14_45.cpp  第14章 操作重载与类型转换.md
chapter_15/: listing_oop.cpp  test_15_11.cpp  test_15_13.cpp  test_15_17.cpp  test_15_28.cpp  test_15_29.cpp  test_15_30.cpp  第15章 面向对象程序设计.md
chapter_16/: listing_templates_generic.cpp  test_16_19.cpp  test_16_20.cpp  test_16_3.cpp  test_16_34.cpp  test_16_35.cpp  test_16_36.cpp  test_16_37.cpp  test_16_39.cpp  test_16_4.cpp  test_16_40.cpp  test_16_41.cpp  test_16_42.cpp  test_16_45.cpp  test_16_5.cpp  test_16_53.cpp  test_16_58.cpp  test_16_62.cpp  test_16_63.cpp  test_16_7.cpp  第16章 模板与泛型编程.md
chapter_17/: listing_library_facilities.cpp  test_17_1.cpp  test_17_10.cpp  test_17_11.cpp  test_17_2.cpp  test_17_30.cpp  test_17_35.cpp  test_17_9.cpp  第17章 标准库特殊设施.md
chapter_18/: listing_tools_for_large_programs.cpp  test_18_10.cpp  test_18_16.cpp  test_18_2.cpp  test_18_28.cpp  test_18_29.cpp  第18章 用于大型程序的工具.md
chapter_19/: listing_spec_tools_and_techs.cpp  test_19_1.cpp  test_19_10.cpp  第19章 特殊工具与技术.md
chapter_2/: listing_const.cpp  listing_dealing_with_types.cpp  listing_literal.cpp  listing_pointer.cpp  listing_reference.cpp  listing_scope.cpp  listing_struct.cpp  test_2_10.cpp  test_2_13.cpp  test_2_14.cpp  test_2_17.cpp  test_2_18.cpp  test_2_20.cpp  test_2_35.cpp  test_2_36.cpp  test_2_37.cpp  test_2_38.cpp  test_2_4.cpp  test_2_8.cpp  第2章 变量和基本类型.md  第2章练习.md
chapter_3/: listing_2d_array.cpp  listing_array.cpp  listing_iterator.cpp  listing_string.cpp  listing_using.cpp  listing_vector.cpp  test_3_10.cpp  test_3_11.cpp  test_3_14.cpp  test_3_15.cpp  test_3_16.cpp  test_3_17.cpp  test_3_19.cpp  test_3_2.cpp  test_3_20.cpp  test_3_22.cpp  test_3_23.cpp  test_3_24.cpp  test_3_25.cpp  test_3_28.cpp  test_3_31.cpp  test_3_32.cpp  test_3_35.cpp  test_3_36.cpp  test_3_37.cpp  test_3_39.cpp  test_3_4.cpp  test_3_40.cpp  test_3_41.cpp  test_3_42.cpp  test_3_43.cpp  test_3_45.cpp  test_3_5.cpp  test_3_6.cpp  test_3_7.cpp  test_3_8.cpp  test_3_9.cpp  第3章 字符串向量和数组.md  第3章练习.md
chapter_4/: listing_expression.cpp  test_4_1.cpp  test_4_10.cpp  test_4_13.cpp  test_4_18.cpp  test_4_21.cpp  test_4_22.cpp  test_4_23.cpp  test_4_27.cpp  test_4_29.cpp  test_4_36.cpp  test_4_4.cpp  第4章 表达式.md
chapter_5/: listing_statement.cpp  test_5_10.cpp  test_5_11.cpp  test_5_12.cpp  test_5_13.cpp  test_5_14.cpp  test_5_17.cpp  test_5_19.cpp  test_5_20.cpp  test_5_21.cpp  test_5_22.cpp  test_5_23.cpp  test_5_24.cpp  test_5_25.cpp  test_5_3.cpp  test_5_5.cpp  test_5_6.cpp  test_5_9.cpp  第5章 语句.md
chapter_6/: listing_function.cpp  test_6_10.cpp  test_6_12.cpp  test_6_17.cpp  test_6_21.cpp  test_6_22.cpp  test_6_23.cpp  test_6_24.cpp  test_6_25.cpp  test_6_27.cpp  test_6_3.cpp  test_6_32.cpp  test_6_33.cpp  test_6_37.cpp  test_6_4.cpp  test_6_42.cpp  test_6_44.cpp  test_6_5.cpp  test_6_56.cpp  test_6_6.cpp  test_6_7.cpp  第6章 函数.md
chapter_7/: listing_class.cpp  test_7_11.cpp  test_7_27.cpp  test_7_31.cpp  test_7_35.cpp  test_7_36.cpp  test_7_43.cpp  test_7_52.cpp  test_7_58.cpp  第7章 类.md
chapter_8/: listing_io.cpp  test_8_1.cpp  test_8_10.cpp  test_8_10.txt  test_8_11.cpp  test_8_4.cpp  test_8_4.txt  test_8_5.cpp  test_8_5.txt  test_8_6.cpp  test_8_6.txt  test_8_7.cpp  test_8_7_out.txt  test_8_9.cpp  第8章 IO库.md
chapter_9/: listing_seq_container.cpp  listing_vector.cpp  test_9_14.cpp  test_9_15.cpp  test_9_16.cpp  test_9_18.cpp  test_9_19.cpp  test_9_2.cpp  test_9_20.cpp  test_9_21.cpp  test_9_22.cpp  test_9_23.cpp  test_9_24.cpp  test_9_25.cpp  test_9_26.cpp  test_9_27.cpp  test_9_28.cpp  test_9_31.cpp  test_9_33.cpp  test_9_34.cpp  test_9_38.cpp  test_9_4.cpp  test_9_41.cpp  test_9_43.cpp  test_9_44.cpp  test_9_45.cpp  test_9_46.cpp  test_9_47.cpp  test_9_48.cpp  test_9_5.cpp  test_9_50.cpp  test_9_51.cpp  test_9_52.cpp  test_9_6.cpp  第9章 顺序容器.md
include/: Account.h  Animal.h  AnimalVirtualBase.h  BinStrTree.h  Blob.h  Chapter6.h  Employee.h  Folder.h  HasPtr.h  Message.h  Person.h  PersonInfo.h  Quote.h  Sales_data.h  Sales_item.h  Screen.h  StrBlob.h  StrVec.h  TextQuery.h  TreeNode.h  Utils.h  Window_mgr.h
other_cpp_version/: C++_14.md  C++_17.md  C++_20.md  cpp17.cpp  cpp20.cpp
