cmake_minimum_required(VERSION 3.29)
project(C___Primer)

set(CMAKE_CXX_STANDARD 20)

add_executable(C___Primer main.cpp
        include/Sales_item.h
        include/Sales_data.h
        include/Utils.h
        include/Chapter6.h
        include/Person.h

        chapter_1/listing_io.cpp
        chapter_1/listing_comment.cpp
        chapter_1/listing_while.cpp
        chapter_1/listing_for.cpp
        chapter_1/listing_input_while.cpp
        chapter_1/listing_if.cpp
        chapter_1/listing_sales_item.cpp
        chapter_1/listing_sales_item_add.cpp
        chapter_1/listing_member_function.cpp
        chapter_1/listing_bookstore.cpp
        chapter_1/test_1_3.cpp
        chapter_1/test_1_4.cpp
        chapter_1/test_1_5.cpp
        chapter_1/test_1_6.cpp
        chapter_1/test_1_9.cpp
        chapter_1/test_1_10.cpp
        chapter_1/test_1_11.cpp
        chapter_1/test_1_12.cpp
        chapter_1/test_1_16.cpp
        chapter_1/test_1_20.cpp
        chapter_1/test_1_22.cpp
        chapter_1/test_1_23.cpp

        chapter_2/listing_literal.cpp
        chapter_2/listing_scope.cpp
        chapter_2/listing_reference.cpp
        chapter_2/listing_pointer.cpp
        chapter_2/listing_const.cpp
        chapter_2/listing_dealing_with_types.cpp
        chapter_2/listing_struct.cpp
        chapter_2/test_2_4.cpp
        chapter_2/test_2_8.cpp
        chapter_2/test_2_10.cpp
        chapter_2/test_2_13.cpp
        chapter_2/test_2_14.cpp
        chapter_2/test_2_17.cpp
        chapter_2/test_2_18.cpp
        chapter_2/test_2_20.cpp
        chapter_2/test_2_35.cpp
        chapter_2/test_2_36.cpp
        chapter_2/test_2_37.cpp
        chapter_2/test_2_38.cpp

        chapter_3/listing_using.cpp
        chapter_3/listing_string.cpp
        chapter_3/listing_vector.cpp
        chapter_3/listing_iterator.cpp
        chapter_3/listing_array.cpp
        chapter_3/listing_2d_array.cpp
        chapter_3/test_3_2.cpp
        chapter_3/test_3_4.cpp
        chapter_3/test_3_5.cpp
        chapter_3/test_3_6.cpp
        chapter_3/test_3_7.cpp
        chapter_3/test_3_8.cpp
        chapter_3/test_3_9.cpp
        chapter_3/test_3_10.cpp
        chapter_3/test_3_11.cpp
        chapter_3/test_3_14.cpp
        chapter_3/test_3_15.cpp
        chapter_3/test_3_16.cpp
        chapter_3/test_3_17.cpp
        chapter_3/test_3_19.cpp
        chapter_3/test_3_20.cpp
        chapter_3/test_3_23.cpp
        chapter_3/test_3_22.cpp
        chapter_3/test_3_24.cpp
        chapter_3/test_3_25.cpp
        chapter_3/test_3_28.cpp
        chapter_3/test_3_31.cpp
        chapter_3/test_3_32.cpp
        chapter_3/test_3_35.cpp
        chapter_3/test_3_36.cpp
        chapter_3/test_3_37.cpp
        chapter_3/test_3_39.cpp
        chapter_3/test_3_40.cpp
        chapter_3/test_3_41.cpp
        chapter_3/test_3_42.cpp
        chapter_3/test_3_43.cpp
        chapter_3/test_3_45.cpp

        chapter_4/listing_expression.cpp
        chapter_4/test_4_1.cpp
        chapter_4/test_4_4.cpp
        chapter_4/test_4_10.cpp
        chapter_4/test_4_13.cpp
        chapter_4/test_4_18.cpp
        chapter_4/test_4_21.cpp
        chapter_4/test_4_22.cpp
        chapter_4/test_4_23.cpp
        chapter_4/test_4_27.cpp
        chapter_4/test_4_29.cpp
        chapter_4/test_4_36.cpp

        chapter_5/listing_statement.cpp
        chapter_5/test_5_3.cpp
        chapter_5/test_5_5.cpp
        chapter_5/test_5_6.cpp
        chapter_5/test_5_9.cpp
        chapter_5/test_5_10.cpp
        chapter_5/test_5_11.cpp
        chapter_5/test_5_12.cpp
        chapter_5/test_5_13.cpp
        chapter_5/test_5_14.cpp
        chapter_5/test_5_17.cpp
        chapter_5/test_5_19.cpp
        chapter_5/test_5_20.cpp
        chapter_5/test_5_21.cpp
        chapter_5/test_5_22.cpp
        chapter_5/test_5_23.cpp
        chapter_5/test_5_24.cpp
        chapter_5/test_5_25.cpp

        chapter_6/listing_function.cpp
        chapter_6/test_6_3.cpp
        chapter_6/test_6_4.cpp
        chapter_6/test_6_5.cpp
        chapter_6/test_6_6.cpp
        chapter_6/test_6_7.cpp
        chapter_6/test_6_10.cpp
        chapter_6/test_6_12.cpp
        chapter_6/test_6_17.cpp
        chapter_6/test_6_21.cpp
        chapter_6/test_6_22.cpp
        chapter_6/test_6_23.cpp
        chapter_6/test_6_24.cpp
        chapter_6/test_6_25.cpp
        chapter_6/test_6_27.cpp
        chapter_6/test_6_32.cpp
        chapter_6/test_6_33.cpp
        chapter_6/test_6_37.cpp
        chapter_6/test_6_42.cpp
        chapter_6/test_6_44.cpp
        chapter_6/test_6_56.cpp

        chapter_7/test_7_11.cpp
)
