cmake_minimum_required(VERSION 4.0)
project(C___Primer)

set(CMAKE_CXX_STANDARD 20)

add_executable(C___Primer main.cpp
        include/Sales_item.h
        include/Sales_data.h
        include/Utils.h
        include/Chapter6.h
        include/Person.h
        include/Screen.h
        include/Window_mgr.h
        include/Account.h
        include/PersonInfo.h
        include/StrBlob.h
        include/TextQuery.h
        include/Employee.h
        include/HasPtr.h
        include/TreeNode.h
        include/BinStrTree.h
        include/Message.h
        include/Folder.h
        include/StrVec.h
        include/Quote.h
        include/Blob.h

        chapter_1/listing_io.cpp
        chapter_1/listing_comment.cpp
        chapter_1/listing_while.cpp
        chapter_1/listing_for.cpp
        chapter_1/listing_input_while.cpp
        chapter_1/listing_if.cpp
        chapter_1/listing_sales_item.cpp
        chapter_1/listing_sales_item_add.cpp
        chapter_1/listing_member_function.cpp
        chapter_1/listing_bookstore.cpp
        chapter_1/test_1_3.cpp
        chapter_1/test_1_4.cpp
        chapter_1/test_1_5.cpp
        chapter_1/test_1_6.cpp
        chapter_1/test_1_9.cpp
        chapter_1/test_1_10.cpp
        chapter_1/test_1_11.cpp
        chapter_1/test_1_12.cpp
        chapter_1/test_1_16.cpp
        chapter_1/test_1_20.cpp
        chapter_1/test_1_22.cpp
        chapter_1/test_1_23.cpp

        chapter_2/listing_literal.cpp
        chapter_2/listing_scope.cpp
        chapter_2/listing_reference.cpp
        chapter_2/listing_pointer.cpp
        chapter_2/listing_const.cpp
        chapter_2/listing_dealing_with_types.cpp
        chapter_2/listing_struct.cpp
        chapter_2/test_2_4.cpp
        chapter_2/test_2_8.cpp
        chapter_2/test_2_10.cpp
        chapter_2/test_2_13.cpp
        chapter_2/test_2_14.cpp
        chapter_2/test_2_17.cpp
        chapter_2/test_2_18.cpp
        chapter_2/test_2_20.cpp
        chapter_2/test_2_35.cpp
        chapter_2/test_2_36.cpp
        chapter_2/test_2_37.cpp
        chapter_2/test_2_38.cpp

        chapter_3/listing_using.cpp
        chapter_3/listing_string.cpp
        chapter_3/listing_vector.cpp
        chapter_3/listing_iterator.cpp
        chapter_3/listing_array.cpp
        chapter_3/listing_2d_array.cpp
        chapter_3/test_3_2.cpp
        chapter_3/test_3_4.cpp
        chapter_3/test_3_5.cpp
        chapter_3/test_3_6.cpp
        chapter_3/test_3_7.cpp
        chapter_3/test_3_8.cpp
        chapter_3/test_3_9.cpp
        chapter_3/test_3_10.cpp
        chapter_3/test_3_11.cpp
        chapter_3/test_3_14.cpp
        chapter_3/test_3_15.cpp
        chapter_3/test_3_16.cpp
        chapter_3/test_3_17.cpp
        chapter_3/test_3_19.cpp
        chapter_3/test_3_20.cpp
        chapter_3/test_3_23.cpp
        chapter_3/test_3_22.cpp
        chapter_3/test_3_24.cpp
        chapter_3/test_3_25.cpp
        chapter_3/test_3_28.cpp
        chapter_3/test_3_31.cpp
        chapter_3/test_3_32.cpp
        chapter_3/test_3_35.cpp
        chapter_3/test_3_36.cpp
        chapter_3/test_3_37.cpp
        chapter_3/test_3_39.cpp
        chapter_3/test_3_40.cpp
        chapter_3/test_3_41.cpp
        chapter_3/test_3_42.cpp
        chapter_3/test_3_43.cpp
        chapter_3/test_3_45.cpp

        chapter_4/listing_expression.cpp
        chapter_4/test_4_1.cpp
        chapter_4/test_4_4.cpp
        chapter_4/test_4_10.cpp
        chapter_4/test_4_13.cpp
        chapter_4/test_4_18.cpp
        chapter_4/test_4_21.cpp
        chapter_4/test_4_22.cpp
        chapter_4/test_4_23.cpp
        chapter_4/test_4_27.cpp
        chapter_4/test_4_29.cpp
        chapter_4/test_4_36.cpp

        chapter_5/listing_statement.cpp
        chapter_5/test_5_3.cpp
        chapter_5/test_5_5.cpp
        chapter_5/test_5_6.cpp
        chapter_5/test_5_9.cpp
        chapter_5/test_5_10.cpp
        chapter_5/test_5_11.cpp
        chapter_5/test_5_12.cpp
        chapter_5/test_5_13.cpp
        chapter_5/test_5_14.cpp
        chapter_5/test_5_17.cpp
        chapter_5/test_5_19.cpp
        chapter_5/test_5_20.cpp
        chapter_5/test_5_21.cpp
        chapter_5/test_5_22.cpp
        chapter_5/test_5_23.cpp
        chapter_5/test_5_24.cpp
        chapter_5/test_5_25.cpp

        chapter_6/listing_function.cpp
        chapter_6/test_6_3.cpp
        chapter_6/test_6_4.cpp
        chapter_6/test_6_5.cpp
        chapter_6/test_6_6.cpp
        chapter_6/test_6_7.cpp
        chapter_6/test_6_10.cpp
        chapter_6/test_6_12.cpp
        chapter_6/test_6_17.cpp
        chapter_6/test_6_21.cpp
        chapter_6/test_6_22.cpp
        chapter_6/test_6_23.cpp
        chapter_6/test_6_24.cpp
        chapter_6/test_6_25.cpp
        chapter_6/test_6_27.cpp
        chapter_6/test_6_32.cpp
        chapter_6/test_6_33.cpp
        chapter_6/test_6_37.cpp
        chapter_6/test_6_42.cpp
        chapter_6/test_6_44.cpp
        chapter_6/test_6_56.cpp

        chapter_7/listing_class.cpp
        chapter_7/test_7_11.cpp
        chapter_7/test_7_27.cpp
        chapter_7/test_7_31.cpp
        chapter_7/test_7_35.cpp
        chapter_7/test_7_36.cpp
        chapter_7/test_7_43.cpp
        chapter_7/test_7_52.cpp
        chapter_7/test_7_58.cpp

        chapter_8/listing_io.cpp
        chapter_8/test_8_1.cpp
        chapter_8/test_8_4.cpp
        chapter_8/test_8_5.cpp
        chapter_8/test_8_6.cpp
        chapter_8/test_8_7.cpp
        chapter_8/test_8_9.cpp
        chapter_8/test_8_10.cpp
        chapter_8/test_8_11.cpp

        chapter_9/listing_seq_container.cpp
        chapter_9/test_9_2.cpp
        chapter_9/test_9_4.cpp
        chapter_9/test_9_5.cpp
        chapter_9/test_9_6.cpp
        chapter_9/test_9_14.cpp
        chapter_9/test_9_15.cpp
        chapter_9/test_9_16.cpp
        chapter_9/test_9_18.cpp
        chapter_9/test_9_19.cpp
        chapter_9/test_9_20.cpp
        chapter_9/test_9_21.cpp
        chapter_9/test_9_22.cpp
        chapter_9/test_9_23.cpp
        chapter_9/test_9_24.cpp
        chapter_9/test_9_25.cpp
        chapter_9/test_9_26.cpp
        chapter_9/test_9_27.cpp
        chapter_9/test_9_28.cpp
        chapter_9/test_9_31.cpp
        chapter_9/test_9_33.cpp
        chapter_9/test_9_34.cpp
        chapter_9/test_9_38.cpp
        chapter_9/test_9_41.cpp
        chapter_9/test_9_43.cpp
        chapter_9/test_9_44.cpp
        chapter_9/test_9_45.cpp
        chapter_9/test_9_46.cpp
        chapter_9/test_9_47.cpp
        chapter_9/test_9_48.cpp
        chapter_9/test_9_50.cpp
        chapter_9/test_9_51.cpp
        chapter_9/test_9_52.cpp

        chapter_10/listing_generic_algorithm.cpp
        chapter_10/test_10_1.cpp
        chapter_10/test_10_2.cpp
        chapter_10/test_10_4.cpp
        chapter_10/test_10_5.cpp
        chapter_10/test_10_6.cpp
        chapter_10/test_10_9.cpp
        chapter_10/test_10_11.cpp
        chapter_10/test_10_12.cpp
        chapter_10/test_10_13.cpp
        chapter_10/test_10_14.cpp
        chapter_10/test_10_15.cpp
        chapter_10/test_10_18.cpp
        chapter_10/test_10_20.cpp
        chapter_10/test_10_21.cpp
        chapter_10/test_10_24.cpp
        chapter_10/test_10_27.cpp
        chapter_10/test_10_28.cpp
        chapter_10/test_10_29.cpp
        chapter_10/test_10_30.cpp
        chapter_10/test_10_31.cpp
        chapter_10/test_10_33.cpp
        chapter_10/test_10_34.cpp
        chapter_10/test_10_35.cpp
        chapter_10/test_10_36.cpp
        chapter_10/test_10_37.cpp
        chapter_10/test_10_42.cpp

        chapter_11/listing_associative_container.cpp
        chapter_11/test_11_4.cpp
        chapter_11/test_11_7.cpp
        chapter_11/test_11_8.cpp
        chapter_11/test_11_9.cpp
        chapter_11/test_11_10.cpp
        chapter_11/test_11_12.cpp
        chapter_11/test_11_14.cpp
        chapter_11/test_11_16.cpp
        chapter_11/test_11_17.cpp
        chapter_11/test_11_20.cpp
        chapter_11/test_11_23.cpp
        chapter_11/test_11_26.cpp
        chapter_11/test_11_31.cpp
        chapter_11/test_11_38.cpp

        chapter_12/listing_dynamic_memory.cpp
        chapter_12/test_12_6.cpp
        chapter_12/test_12_7.cpp
        chapter_12/test_12_10.cpp
        chapter_12/test_12_14.cpp
        chapter_12/test_12_17.cpp
        chapter_12/test_12_20.cpp
        chapter_12/test_12_23.cpp
        chapter_12/test_12_24.cpp
        chapter_12/test_12_26.cpp
        chapter_12/test_12_28.cpp

        chapter_13/listing_copy_control.cpp
        chapter_13/test_13_5.cpp
        chapter_13/test_13_28.cpp
        chapter_13/test_13_30.cpp
        chapter_13/test_13_31.cpp
        chapter_13/test_13_39.cpp

        chapter_14/listing_overloaded_operations.cpp
        chapter_14/test_14_2.cpp
        chapter_14/test_14_3.cpp
        chapter_14/test_14_16.cpp
        chapter_14/test_14_22.cpp
        chapter_14/test_14_34.cpp
        chapter_14/test_14_35.cpp
        chapter_14/test_14_37.cpp
        chapter_14/test_14_38.cpp
        chapter_14/test_14_40.cpp
        chapter_14/test_14_42.cpp
        chapter_14/test_14_43.cpp
        chapter_14/test_14_45.cpp

        chapter_15/listing_oop.cpp
        chapter_15/test_15_11.cpp
        chapter_15/test_15_13.cpp
        chapter_15/test_15_17.cpp
        chapter_15/test_15_28.cpp
        chapter_15/test_15_29.cpp
        chapter_15/test_15_30.cpp

        chapter_16/listing_templates_generic.cpp
        chapter_16/test_16_3.cpp
        chapter_16/test_16_4.cpp
        chapter_16/test_16_5.cpp
        chapter_16/test_16_7.cpp
        chapter_16/test_16_19.cpp
        chapter_16/test_16_20.cpp
        chapter_16/test_16_34.cpp
        chapter_16/test_16_35.cpp
        chapter_16/test_16_36.cpp
        chapter_16/test_16_37.cpp
        chapter_16/test_16_39.cpp
        chapter_16/test_16_40.cpp
        chapter_16/test_16_41.cpp
        chapter_16/test_16_42.cpp
        chapter_16/test_16_45.cpp
        chapter_16/test_16_53.cpp
        chapter_16/test_16_58.cpp
        chapter_16/test_16_62.cpp
        chapter_16/test_16_63.cpp
)
